cmake_minimum_required(VERSION 3.21)
project(RT1064 C)

set(CMAKE_C_STANDARD 11)

include_directories(Libraries)
include_directories(Libraries/nxp_libraries/CMSIS/Driver/Include)
include_directories(Libraries/nxp_libraries/CMSIS/Include)
include_directories(Libraries/nxp_libraries/cmsis_drivers)
include_directories(Libraries/nxp_libraries/components/lists)
include_directories(Libraries/nxp_libraries/components/osa)
include_directories(Libraries/nxp_libraries/components/serial_manager)
include_directories(Libraries/nxp_libraries/components/serial_manager/usb_cdc_adapter)
include_directories(Libraries/nxp_libraries/components/uart)
include_directories(Libraries/nxp_libraries/deceive)
include_directories(Libraries/nxp_libraries/drives)
include_directories(Libraries/nxp_libraries/middleware/fatfs/source)
include_directories(Libraries/nxp_libraries/middleware/fatfs/source/fsl_mmc_disk)
include_directories(Libraries/nxp_libraries/middleware/fatfs/source/fsl_nand_disk)
include_directories(Libraries/nxp_libraries/middleware/fatfs/source/fsl_ram_disk)
include_directories(Libraries/nxp_libraries/middleware/fatfs/source/fsl_sd_disk)
include_directories(Libraries/nxp_libraries/middleware/fatfs/source/fsl_usb_disk)
include_directories(Libraries/nxp_libraries/middleware/fatfs/template)
include_directories(Libraries/nxp_libraries/middleware/sdmmc/inc)
include_directories(Libraries/nxp_libraries/middleware/sdmmc/port)
include_directories(Libraries/nxp_libraries/middleware/usb/dcd)
include_directories(Libraries/nxp_libraries/middleware/usb/device)
include_directories(Libraries/nxp_libraries/middleware/usb/host)
include_directories(Libraries/nxp_libraries/middleware/usb/host/class)
include_directories(Libraries/nxp_libraries/middleware/usb/include)
include_directories(Libraries/nxp_libraries/middleware/usb/npw)
include_directories(Libraries/nxp_libraries/middleware/usb/npw/host_config)
include_directories(Libraries/nxp_libraries/middleware/usb/npw/host_config/fatfs)
include_directories(Libraries/nxp_libraries/middleware/usb/npw/host_config/fatfs/ehci)
include_directories(Libraries/nxp_libraries/middleware/usb/phy)
include_directories(Libraries/nxp_libraries/middleware/usb/templates/config)
include_directories(Libraries/nxp_libraries/middleware/usb/templates/device)
include_directories(Libraries/nxp_libraries/middleware/usb/templates/device/class)
include_directories(Libraries/nxp_libraries/utilities)
include_directories(Libraries/nxp_libraries/utilities/debug_console)
include_directories(Libraries/nxp_libraries/utilities/str)
include_directories(Libraries/nxp_libraries/xip)
include_directories(Libraries/seekfree_libraries)
include_directories(Libraries/seekfree_libraries/board)
include_directories(Libraries/seekfree_libraries/common)
include_directories(Libraries/seekfree_peripheral)
include_directories(my-smartcar/CODE)
include_directories(my-smartcar/USER/inc)

add_executable(RT1064
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_CAN.c
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_ETH_MAC.c
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_ETH_PHY.c
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_Flash.c
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_I2C.c
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_MCI.c
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_SAI.c
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_SPI.c
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_Storage.c
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_USART.c
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_USBD.c
        Libraries/nxp_libraries/CMSIS/Driver/DriverTemplates/Driver_USBH.c
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_CAN.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_Common.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_ETH.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_ETH_MAC.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_ETH_PHY.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_Flash.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_I2C.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_MCI.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_NAND.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_SAI.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_SPI.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_USART.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_USB.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_USBD.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_USBH.h
        Libraries/nxp_libraries/CMSIS/Driver/Include/Driver_WiFi.h
        Libraries/nxp_libraries/CMSIS/Include/arm_common_tables.h
        Libraries/nxp_libraries/CMSIS/Include/arm_const_structs.h
        Libraries/nxp_libraries/CMSIS/Include/arm_math.h
        Libraries/nxp_libraries/CMSIS/Include/cmsis_armcc.h
        Libraries/nxp_libraries/CMSIS/Include/cmsis_armclang.h
        Libraries/nxp_libraries/CMSIS/Include/cmsis_armclang_ltm.h
        Libraries/nxp_libraries/CMSIS/Include/cmsis_compiler.h
        Libraries/nxp_libraries/CMSIS/Include/cmsis_gcc.h
        Libraries/nxp_libraries/CMSIS/Include/cmsis_iccarm.h
        Libraries/nxp_libraries/CMSIS/Include/cmsis_version.h
        Libraries/nxp_libraries/CMSIS/Include/core_armv81mml.h
        Libraries/nxp_libraries/CMSIS/Include/core_armv8mbl.h
        Libraries/nxp_libraries/CMSIS/Include/core_armv8mml.h
        Libraries/nxp_libraries/CMSIS/Include/core_cm0.h
        Libraries/nxp_libraries/CMSIS/Include/core_cm0plus.h
        Libraries/nxp_libraries/CMSIS/Include/core_cm1.h
        Libraries/nxp_libraries/CMSIS/Include/core_cm23.h
        Libraries/nxp_libraries/CMSIS/Include/core_cm3.h
        Libraries/nxp_libraries/CMSIS/Include/core_cm33.h
        Libraries/nxp_libraries/CMSIS/Include/core_cm35p.h
        Libraries/nxp_libraries/CMSIS/Include/core_cm4.h
        Libraries/nxp_libraries/CMSIS/Include/core_cm7.h
        Libraries/nxp_libraries/CMSIS/Include/core_dsp.h
        Libraries/nxp_libraries/CMSIS/Include/core_sc000.h
        Libraries/nxp_libraries/CMSIS/Include/core_sc300.h
        Libraries/nxp_libraries/CMSIS/Include/mpu_armv7.h
        Libraries/nxp_libraries/CMSIS/Include/mpu_armv8.h
        Libraries/nxp_libraries/CMSIS/Include/tz_context.h
        Libraries/nxp_libraries/cmsis_drivers/fsl_lpi2c_cmsis.c
        Libraries/nxp_libraries/cmsis_drivers/fsl_lpi2c_cmsis.h
        Libraries/nxp_libraries/cmsis_drivers/fsl_lpspi_cmsis.c
        Libraries/nxp_libraries/cmsis_drivers/fsl_lpspi_cmsis.h
        Libraries/nxp_libraries/cmsis_drivers/fsl_lpuart_cmsis.c
        Libraries/nxp_libraries/cmsis_drivers/fsl_lpuart_cmsis.h
        Libraries/nxp_libraries/components/lists/generic_list.c
        Libraries/nxp_libraries/components/lists/generic_list.h
        Libraries/nxp_libraries/components/osa/fsl_os_abstraction.h
        Libraries/nxp_libraries/components/osa/fsl_os_abstraction_bm.c
        Libraries/nxp_libraries/components/osa/fsl_os_abstraction_bm.h
        Libraries/nxp_libraries/components/osa/fsl_os_abstraction_config.h
        Libraries/nxp_libraries/components/serial_manager/usb_cdc_adapter/usb_device_cdc_acm.c
        Libraries/nxp_libraries/components/serial_manager/usb_cdc_adapter/usb_device_cdc_acm.h
        Libraries/nxp_libraries/components/serial_manager/usb_cdc_adapter/usb_device_ch9.c
        Libraries/nxp_libraries/components/serial_manager/usb_cdc_adapter/usb_device_ch9.h
        Libraries/nxp_libraries/components/serial_manager/usb_cdc_adapter/usb_device_class.c
        Libraries/nxp_libraries/components/serial_manager/usb_cdc_adapter/usb_device_class.h
        Libraries/nxp_libraries/components/serial_manager/usb_cdc_adapter/usb_device_config.h
        Libraries/nxp_libraries/components/serial_manager/usb_cdc_adapter/usb_device_descriptor.c
        Libraries/nxp_libraries/components/serial_manager/usb_cdc_adapter/usb_device_descriptor.h
        Libraries/nxp_libraries/components/serial_manager/serial_manager.c
        Libraries/nxp_libraries/components/serial_manager/serial_manager.h
        Libraries/nxp_libraries/components/serial_manager/serial_port_internal.h
        Libraries/nxp_libraries/components/serial_manager/serial_port_swo.c
        Libraries/nxp_libraries/components/serial_manager/serial_port_swo.h
        Libraries/nxp_libraries/components/serial_manager/serial_port_uart.c
        Libraries/nxp_libraries/components/serial_manager/serial_port_uart.h
        Libraries/nxp_libraries/components/serial_manager/serial_port_usb.c
        Libraries/nxp_libraries/components/serial_manager/serial_port_usb.h
        Libraries/nxp_libraries/components/serial_manager/serial_port_usb_virtual.c
        Libraries/nxp_libraries/components/serial_manager/serial_port_usb_virtual.h
        Libraries/nxp_libraries/components/uart/lpuart_adapter.c
        Libraries/nxp_libraries/components/uart/uart.h
        Libraries/nxp_libraries/deceive/fsl_device_registers.h
        Libraries/nxp_libraries/deceive/MIMXRT1064.h
        Libraries/nxp_libraries/deceive/MIMXRT1064_features.h
        Libraries/nxp_libraries/deceive/system_MIMXRT1064.c
        Libraries/nxp_libraries/deceive/system_MIMXRT1064.h
        Libraries/nxp_libraries/drives/fsl_adc.c
        Libraries/nxp_libraries/drives/fsl_adc.h
        Libraries/nxp_libraries/drives/fsl_adc_etc.c
        Libraries/nxp_libraries/drives/fsl_adc_etc.h
        Libraries/nxp_libraries/drives/fsl_aipstz.c
        Libraries/nxp_libraries/drives/fsl_aipstz.h
        Libraries/nxp_libraries/drives/fsl_aoi.c
        Libraries/nxp_libraries/drives/fsl_aoi.h
        Libraries/nxp_libraries/drives/fsl_bee.c
        Libraries/nxp_libraries/drives/fsl_bee.h
        Libraries/nxp_libraries/drives/fsl_cache.c
        Libraries/nxp_libraries/drives/fsl_cache.h
        Libraries/nxp_libraries/drives/fsl_clock.c
        Libraries/nxp_libraries/drives/fsl_clock.h
        Libraries/nxp_libraries/drives/fsl_cmp.c
        Libraries/nxp_libraries/drives/fsl_cmp.h
        Libraries/nxp_libraries/drives/fsl_common.c
        Libraries/nxp_libraries/drives/fsl_common.h
        Libraries/nxp_libraries/drives/fsl_csi.c
        Libraries/nxp_libraries/drives/fsl_csi.h
        Libraries/nxp_libraries/drives/fsl_dcdc.c
        Libraries/nxp_libraries/drives/fsl_dcdc.h
        Libraries/nxp_libraries/drives/fsl_dcp.c
        Libraries/nxp_libraries/drives/fsl_dcp.h
        Libraries/nxp_libraries/drives/fsl_dmamux.c
        Libraries/nxp_libraries/drives/fsl_dmamux.h
        Libraries/nxp_libraries/drives/fsl_edma.c
        Libraries/nxp_libraries/drives/fsl_edma.h
        Libraries/nxp_libraries/drives/fsl_elcdif.c
        Libraries/nxp_libraries/drives/fsl_elcdif.h
        Libraries/nxp_libraries/drives/fsl_enc.c
        Libraries/nxp_libraries/drives/fsl_enc.h
        Libraries/nxp_libraries/drives/fsl_enet.c
        Libraries/nxp_libraries/drives/fsl_enet.h
        Libraries/nxp_libraries/drives/fsl_ewm.c
        Libraries/nxp_libraries/drives/fsl_ewm.h
        Libraries/nxp_libraries/drives/fsl_flexcan.c
        Libraries/nxp_libraries/drives/fsl_flexcan.h
        Libraries/nxp_libraries/drives/fsl_flexcan_edma.c
        Libraries/nxp_libraries/drives/fsl_flexcan_edma.h
        Libraries/nxp_libraries/drives/fsl_flexio.c
        Libraries/nxp_libraries/drives/fsl_flexio.h
        Libraries/nxp_libraries/drives/fsl_flexio_camera.c
        Libraries/nxp_libraries/drives/fsl_flexio_camera.h
        Libraries/nxp_libraries/drives/fsl_flexio_camera_edma.c
        Libraries/nxp_libraries/drives/fsl_flexio_camera_edma.h
        Libraries/nxp_libraries/drives/fsl_flexio_i2c_master.c
        Libraries/nxp_libraries/drives/fsl_flexio_i2c_master.h
        Libraries/nxp_libraries/drives/fsl_flexio_i2s.c
        Libraries/nxp_libraries/drives/fsl_flexio_i2s.h
        Libraries/nxp_libraries/drives/fsl_flexio_i2s_edma.c
        Libraries/nxp_libraries/drives/fsl_flexio_i2s_edma.h
        Libraries/nxp_libraries/drives/fsl_flexio_mculcd.c
        Libraries/nxp_libraries/drives/fsl_flexio_mculcd.h
        Libraries/nxp_libraries/drives/fsl_flexio_mculcd_edma.c
        Libraries/nxp_libraries/drives/fsl_flexio_mculcd_edma.h
        Libraries/nxp_libraries/drives/fsl_flexio_spi.c
        Libraries/nxp_libraries/drives/fsl_flexio_spi.h
        Libraries/nxp_libraries/drives/fsl_flexio_spi_edma.c
        Libraries/nxp_libraries/drives/fsl_flexio_spi_edma.h
        Libraries/nxp_libraries/drives/fsl_flexio_uart.c
        Libraries/nxp_libraries/drives/fsl_flexio_uart.h
        Libraries/nxp_libraries/drives/fsl_flexio_uart_edma.c
        Libraries/nxp_libraries/drives/fsl_flexio_uart_edma.h
        Libraries/nxp_libraries/drives/fsl_flexram.c
        Libraries/nxp_libraries/drives/fsl_flexram.h
        Libraries/nxp_libraries/drives/fsl_flexram_allocate.c
        Libraries/nxp_libraries/drives/fsl_flexram_allocate.h
        Libraries/nxp_libraries/drives/fsl_flexspi.c
        Libraries/nxp_libraries/drives/fsl_flexspi.h
        Libraries/nxp_libraries/drives/fsl_gpc.c
        Libraries/nxp_libraries/drives/fsl_gpc.h
        Libraries/nxp_libraries/drives/fsl_gpio.c
        Libraries/nxp_libraries/drives/fsl_gpio.h
        Libraries/nxp_libraries/drives/fsl_gpt.c
        Libraries/nxp_libraries/drives/fsl_gpt.h
        Libraries/nxp_libraries/drives/fsl_iomuxc.h
        Libraries/nxp_libraries/drives/fsl_kpp.c
        Libraries/nxp_libraries/drives/fsl_kpp.h
        Libraries/nxp_libraries/drives/fsl_lpi2c.c
        Libraries/nxp_libraries/drives/fsl_lpi2c.h
        Libraries/nxp_libraries/drives/fsl_lpi2c_edma.c
        Libraries/nxp_libraries/drives/fsl_lpi2c_edma.h
        Libraries/nxp_libraries/drives/fsl_lpspi.c
        Libraries/nxp_libraries/drives/fsl_lpspi.h
        Libraries/nxp_libraries/drives/fsl_lpspi_edma.c
        Libraries/nxp_libraries/drives/fsl_lpspi_edma.h
        Libraries/nxp_libraries/drives/fsl_lpuart.c
        Libraries/nxp_libraries/drives/fsl_lpuart.h
        Libraries/nxp_libraries/drives/fsl_lpuart_edma.c
        Libraries/nxp_libraries/drives/fsl_lpuart_edma.h
        Libraries/nxp_libraries/drives/fsl_ocotp.c
        Libraries/nxp_libraries/drives/fsl_ocotp.h
        Libraries/nxp_libraries/drives/fsl_pit.c
        Libraries/nxp_libraries/drives/fsl_pit.h
        Libraries/nxp_libraries/drives/fsl_pmu.c
        Libraries/nxp_libraries/drives/fsl_pmu.h
        Libraries/nxp_libraries/drives/fsl_pwm.c
        Libraries/nxp_libraries/drives/fsl_pwm.h
        Libraries/nxp_libraries/drives/fsl_pxp.c
        Libraries/nxp_libraries/drives/fsl_pxp.h
        Libraries/nxp_libraries/drives/fsl_qtmr.c
        Libraries/nxp_libraries/drives/fsl_qtmr.h
        Libraries/nxp_libraries/drives/fsl_rtwdog.c
        Libraries/nxp_libraries/drives/fsl_rtwdog.h
        Libraries/nxp_libraries/drives/fsl_sai.c
        Libraries/nxp_libraries/drives/fsl_sai.h
        Libraries/nxp_libraries/drives/fsl_sai_edma.c
        Libraries/nxp_libraries/drives/fsl_sai_edma.h
        Libraries/nxp_libraries/drives/fsl_semc.c
        Libraries/nxp_libraries/drives/fsl_semc.h
        Libraries/nxp_libraries/drives/fsl_snvs_hp.c
        Libraries/nxp_libraries/drives/fsl_snvs_hp.h
        Libraries/nxp_libraries/drives/fsl_snvs_lp.c
        Libraries/nxp_libraries/drives/fsl_snvs_lp.h
        Libraries/nxp_libraries/drives/fsl_spdif.c
        Libraries/nxp_libraries/drives/fsl_spdif.h
        Libraries/nxp_libraries/drives/fsl_spdif_edma.c
        Libraries/nxp_libraries/drives/fsl_spdif_edma.h
        Libraries/nxp_libraries/drives/fsl_src.c
        Libraries/nxp_libraries/drives/fsl_src.h
        Libraries/nxp_libraries/drives/fsl_tempmon.c
        Libraries/nxp_libraries/drives/fsl_tempmon.h
        Libraries/nxp_libraries/drives/fsl_trng.c
        Libraries/nxp_libraries/drives/fsl_trng.h
        Libraries/nxp_libraries/drives/fsl_tsc.c
        Libraries/nxp_libraries/drives/fsl_tsc.h
        Libraries/nxp_libraries/drives/fsl_usdhc.c
        Libraries/nxp_libraries/drives/fsl_usdhc.h
        Libraries/nxp_libraries/drives/fsl_wdog.c
        Libraries/nxp_libraries/drives/fsl_wdog.h
        Libraries/nxp_libraries/drives/fsl_xbara.c
        Libraries/nxp_libraries/drives/fsl_xbara.h
        Libraries/nxp_libraries/drives/fsl_xbarb.c
        Libraries/nxp_libraries/drives/fsl_xbarb.h
        Libraries/nxp_libraries/middleware/fatfs/documents/res/app1.c
        Libraries/nxp_libraries/middleware/fatfs/documents/res/app2.c
        Libraries/nxp_libraries/middleware/fatfs/documents/res/app3.c
        Libraries/nxp_libraries/middleware/fatfs/documents/res/app4.c
        Libraries/nxp_libraries/middleware/fatfs/documents/res/app5.c
        Libraries/nxp_libraries/middleware/fatfs/source/fsl_mmc_disk/fsl_mmc_disk.c
        Libraries/nxp_libraries/middleware/fatfs/source/fsl_mmc_disk/fsl_mmc_disk.h
        Libraries/nxp_libraries/middleware/fatfs/source/fsl_nand_disk/fsl_nand_disk.c
        Libraries/nxp_libraries/middleware/fatfs/source/fsl_nand_disk/fsl_nand_disk.h
        Libraries/nxp_libraries/middleware/fatfs/source/fsl_ram_disk/fsl_ram_disk.c
        Libraries/nxp_libraries/middleware/fatfs/source/fsl_ram_disk/fsl_ram_disk.h
        Libraries/nxp_libraries/middleware/fatfs/source/fsl_sd_disk/fsl_sd_disk.c
        Libraries/nxp_libraries/middleware/fatfs/source/fsl_sd_disk/fsl_sd_disk.h
        Libraries/nxp_libraries/middleware/fatfs/source/fsl_usb_disk/fsl_usb_disk.h
        Libraries/nxp_libraries/middleware/fatfs/source/fsl_usb_disk/fsl_usb_disk_bm.c
        Libraries/nxp_libraries/middleware/fatfs/source/diskio.c
        Libraries/nxp_libraries/middleware/fatfs/source/diskio.h
        Libraries/nxp_libraries/middleware/fatfs/source/ff.c
        Libraries/nxp_libraries/middleware/fatfs/source/ff.h
        Libraries/nxp_libraries/middleware/fatfs/source/ffconf.h
        Libraries/nxp_libraries/middleware/fatfs/source/ffconf_template.h
        Libraries/nxp_libraries/middleware/fatfs/source/ffsystem.c
        Libraries/nxp_libraries/middleware/fatfs/source/ffunicode.c
        Libraries/nxp_libraries/middleware/fatfs/template/ffconf.h
        Libraries/nxp_libraries/middleware/sdmmc/inc/fsl_mmc.h
        Libraries/nxp_libraries/middleware/sdmmc/inc/fsl_sd.h
        Libraries/nxp_libraries/middleware/sdmmc/inc/fsl_sdio.h
        Libraries/nxp_libraries/middleware/sdmmc/inc/fsl_sdmmc_common.h
        Libraries/nxp_libraries/middleware/sdmmc/inc/fsl_sdmmc_host.h
        Libraries/nxp_libraries/middleware/sdmmc/inc/fsl_sdmmc_spec.h
        Libraries/nxp_libraries/middleware/sdmmc/port/usdhc/freertos/fsl_sdmmc_event.c
        Libraries/nxp_libraries/middleware/sdmmc/port/usdhc/freertos/fsl_sdmmc_host.c
        Libraries/nxp_libraries/middleware/sdmmc/port/usdhc/interrupt/fsl_sdmmc_event.c
        Libraries/nxp_libraries/middleware/sdmmc/port/usdhc/interrupt/fsl_sdmmc_host.c
        Libraries/nxp_libraries/middleware/sdmmc/port/usdhc/polling/fsl_sdmmc_event.c
        Libraries/nxp_libraries/middleware/sdmmc/port/usdhc/polling/fsl_sdmmc_host.c
        Libraries/nxp_libraries/middleware/sdmmc/port/fsl_sdmmc_event.h
        Libraries/nxp_libraries/middleware/sdmmc/src/fsl_mmc.c
        Libraries/nxp_libraries/middleware/sdmmc/src/fsl_sd.c
        Libraries/nxp_libraries/middleware/sdmmc/src/fsl_sdio.c
        Libraries/nxp_libraries/middleware/sdmmc/src/fsl_sdmmc_common.c
        Libraries/nxp_libraries/middleware/usb/dcd/usb_charger_detect.h
        Libraries/nxp_libraries/middleware/usb/dcd/usb_phydcd.c
        Libraries/nxp_libraries/middleware/usb/dcd/usb_phydcd.h
        Libraries/nxp_libraries/middleware/usb/device/usb_device.h
        Libraries/nxp_libraries/middleware/usb/device/usb_device_dci.c
        Libraries/nxp_libraries/middleware/usb/device/usb_device_dci.h
        Libraries/nxp_libraries/middleware/usb/device/usb_device_ehci.c
        Libraries/nxp_libraries/middleware/usb/device/usb_device_ehci.h
        Libraries/nxp_libraries/middleware/usb/device/usb_device_khci.c
        Libraries/nxp_libraries/middleware/usb/device/usb_device_khci.h
        Libraries/nxp_libraries/middleware/usb/device/usb_device_lpcip3511.c
        Libraries/nxp_libraries/middleware/usb/device/usb_device_lpcip3511.h
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_audio.c
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_audio.h
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_cdc.c
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_cdc.h
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_cdc_rndis.c
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_cdc_rndis.h
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_hid.c
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_hid.h
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_hub.c
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_hub.h
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_hub_app.c
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_hub_app.h
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_msd.c
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_msd.h
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_msd_ufi.c
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_phdc.c
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_phdc.h
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_printer.c
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_printer.h
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_video.c
        Libraries/nxp_libraries/middleware/usb/host/class/usb_host_video.h
        Libraries/nxp_libraries/middleware/usb/host/usb_host.h
        Libraries/nxp_libraries/middleware/usb/host/usb_host_devices.c
        Libraries/nxp_libraries/middleware/usb/host/usb_host_devices.h
        Libraries/nxp_libraries/middleware/usb/host/usb_host_ehci.c
        Libraries/nxp_libraries/middleware/usb/host/usb_host_ehci.h
        Libraries/nxp_libraries/middleware/usb/host/usb_host_framework.c
        Libraries/nxp_libraries/middleware/usb/host/usb_host_framework.h
        Libraries/nxp_libraries/middleware/usb/host/usb_host_hci.c
        Libraries/nxp_libraries/middleware/usb/host/usb_host_hci.h
        Libraries/nxp_libraries/middleware/usb/host/usb_host_ip3516hs.c
        Libraries/nxp_libraries/middleware/usb/host/usb_host_ip3516hs.h
        Libraries/nxp_libraries/middleware/usb/host/usb_host_khci.c
        Libraries/nxp_libraries/middleware/usb/host/usb_host_khci.h
        Libraries/nxp_libraries/middleware/usb/host/usb_host_ohci.c
        Libraries/nxp_libraries/middleware/usb/host/usb_host_ohci.h
        Libraries/nxp_libraries/middleware/usb/include/usb.h
        Libraries/nxp_libraries/middleware/usb/include/usb_misc.h
        Libraries/nxp_libraries/middleware/usb/include/usb_spec.h
        Libraries/nxp_libraries/middleware/usb/npw/host_config/fatfs/ehci/usb_host_config.h
        Libraries/nxp_libraries/middleware/usb/phy/usb_phy.c
        Libraries/nxp_libraries/middleware/usb/phy/usb_phy.h
        Libraries/nxp_libraries/middleware/usb/templates/config/usb_device_config.h
        Libraries/nxp_libraries/middleware/usb/templates/config/usb_host_config.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_audio.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_audio.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_ccid.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_ccid.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_cdc_acm.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_cdc_acm.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_cdc_rndis.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_cdc_rndis.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_class.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_class.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_dfu.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_dfu.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_hid.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_hid.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_msc.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_msc.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_msc_ufi.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_msc_ufi.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_phdc.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_phdc.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_printer.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_printer.h
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_video.c
        Libraries/nxp_libraries/middleware/usb/templates/device/class/usb_device_video.h
        Libraries/nxp_libraries/middleware/usb/templates/device/usb_device_ch9.c
        Libraries/nxp_libraries/middleware/usb/templates/device/usb_device_ch9.h
        Libraries/nxp_libraries/utilities/debug_console/fsl_debug_console.c
        Libraries/nxp_libraries/utilities/debug_console/fsl_debug_console.h
        Libraries/nxp_libraries/utilities/debug_console/fsl_debug_console_conf.h
        Libraries/nxp_libraries/utilities/str/fsl_str.c
        Libraries/nxp_libraries/utilities/str/fsl_str.h
        Libraries/nxp_libraries/utilities/fsl_assert.c
        Libraries/nxp_libraries/utilities/fsl_notifier.c
        Libraries/nxp_libraries/utilities/fsl_notifier.h
        Libraries/nxp_libraries/utilities/fsl_sbrk.c
        Libraries/nxp_libraries/utilities/fsl_shell.c
        Libraries/nxp_libraries/utilities/fsl_shell.h
        Libraries/nxp_libraries/xip/evkmimxrt1064_flexspi_nor_config.c
        Libraries/nxp_libraries/xip/evkmimxrt1064_flexspi_nor_config.h
        Libraries/nxp_libraries/xip/evkmimxrt1064_sdram_ini_dcd.c
        Libraries/nxp_libraries/xip/evkmimxrt1064_sdram_ini_dcd.h
        Libraries/nxp_libraries/xip/fsl_flexspi_nor_boot.c
        Libraries/nxp_libraries/xip/fsl_flexspi_nor_boot.h
        Libraries/seekfree_libraries/board/board.c
        Libraries/seekfree_libraries/board/board.h
        Libraries/seekfree_libraries/board/clock_config.c
        Libraries/seekfree_libraries/board/clock_config.h
        Libraries/seekfree_libraries/board/pin_mux.c
        Libraries/seekfree_libraries/board/pin_mux.h
        Libraries/seekfree_libraries/board/RTE_Device.h
        Libraries/seekfree_libraries/common/common.c
        Libraries/seekfree_libraries/common/common.h
        Libraries/seekfree_libraries/common/SEEKFREE_PRINTF.c
        Libraries/seekfree_libraries/common/SEEKFREE_PRINTF.h
        Libraries/seekfree_libraries/headfile.h
        Libraries/seekfree_libraries/zf_adc.c
        Libraries/seekfree_libraries/zf_adc.h
        Libraries/seekfree_libraries/zf_camera.c
        Libraries/seekfree_libraries/zf_camera.h
        Libraries/seekfree_libraries/zf_csi.c
        Libraries/seekfree_libraries/zf_csi.h
        Libraries/seekfree_libraries/zf_flash.c
        Libraries/seekfree_libraries/zf_flash.h
        Libraries/seekfree_libraries/zf_gpio.c
        Libraries/seekfree_libraries/zf_gpio.h
        Libraries/seekfree_libraries/zf_iic.c
        Libraries/seekfree_libraries/zf_iic.h
        Libraries/seekfree_libraries/zf_iomuxc.c
        Libraries/seekfree_libraries/zf_iomuxc.h
        Libraries/seekfree_libraries/zf_pit.c
        Libraries/seekfree_libraries/zf_pit.h
        Libraries/seekfree_libraries/zf_pwm.c
        Libraries/seekfree_libraries/zf_pwm.h
        Libraries/seekfree_libraries/zf_qtimer.c
        Libraries/seekfree_libraries/zf_qtimer.h
        Libraries/seekfree_libraries/zf_rom_api.c
        Libraries/seekfree_libraries/zf_rom_api.h
        Libraries/seekfree_libraries/zf_sdcard.c
        Libraries/seekfree_libraries/zf_sdcard.h
        Libraries/seekfree_libraries/zf_spi.c
        Libraries/seekfree_libraries/zf_spi.h
        Libraries/seekfree_libraries/zf_systick.c
        Libraries/seekfree_libraries/zf_systick.h
        Libraries/seekfree_libraries/zf_uart.c
        Libraries/seekfree_libraries/zf_uart.h
        Libraries/seekfree_libraries/zf_usb_cdc.c
        Libraries/seekfree_libraries/zf_usb_cdc.h
        Libraries/seekfree_libraries/zf_vector.c
        Libraries/seekfree_libraries/zf_vector.h
        Libraries/seekfree_peripheral/SEEKFREE_18TFT.c
        Libraries/seekfree_peripheral/SEEKFREE_18TFT.h
        Libraries/seekfree_peripheral/SEEKFREE_FONT.c
        Libraries/seekfree_peripheral/SEEKFREE_FONT.h
        Libraries/seekfree_peripheral/SEEKFREE_FUN.c
        Libraries/seekfree_peripheral/SEEKFREE_FUN.h
        Libraries/seekfree_peripheral/SEEKFREE_ICM20602.c
        Libraries/seekfree_peripheral/SEEKFREE_ICM20602.h
        Libraries/seekfree_peripheral/SEEKFREE_IIC.c
        Libraries/seekfree_peripheral/SEEKFREE_IIC.h
        Libraries/seekfree_peripheral/SEEKFREE_IPS114_SPI.c
        Libraries/seekfree_peripheral/SEEKFREE_IPS114_SPI.h
        Libraries/seekfree_peripheral/SEEKFREE_IPS200_PARALLEL8.c
        Libraries/seekfree_peripheral/SEEKFREE_IPS200_PARALLEL8.h
        Libraries/seekfree_peripheral/SEEKFREE_L3G4200D.c
        Libraries/seekfree_peripheral/SEEKFREE_L3G4200D.h
        Libraries/seekfree_peripheral/SEEKFREE_MMA8451.c
        Libraries/seekfree_peripheral/SEEKFREE_MMA8451.h
        Libraries/seekfree_peripheral/SEEKFREE_MPU6050.c
        Libraries/seekfree_peripheral/SEEKFREE_MPU6050.h
        Libraries/seekfree_peripheral/SEEKFREE_MT9V03X.c
        Libraries/seekfree_peripheral/SEEKFREE_MT9V03X.h
        Libraries/seekfree_peripheral/SEEKFREE_MT9V03X_CSI.c
        Libraries/seekfree_peripheral/SEEKFREE_MT9V03X_CSI.h
        Libraries/seekfree_peripheral/SEEKFREE_NRF24L01.c
        Libraries/seekfree_peripheral/SEEKFREE_NRF24L01.h
        Libraries/seekfree_peripheral/SEEKFREE_OLED.c
        Libraries/seekfree_peripheral/SEEKFREE_OLED.h
        Libraries/seekfree_peripheral/SEEKFREE_SCC8660.c
        Libraries/seekfree_peripheral/SEEKFREE_SCC8660.h
        Libraries/seekfree_peripheral/SEEKFREE_SCC8660_CSI.c
        Libraries/seekfree_peripheral/SEEKFREE_SCC8660_CSI.h
        Libraries/seekfree_peripheral/SEEKFREE_VIRSCO.c
        Libraries/seekfree_peripheral/SEEKFREE_VIRSCO.h
        Libraries/seekfree_peripheral/SEEKFREE_W25QXXJV.c
        Libraries/seekfree_peripheral/SEEKFREE_W25QXXJV.h
        Libraries/seekfree_peripheral/SEEKFREE_WIRELESS.c
        Libraries/seekfree_peripheral/SEEKFREE_WIRELESS.h
        my-smartcar/CODE/filter.c
        my-smartcar/CODE/filter.h
        my-smartcar/CODE/GUI.c
        my-smartcar/CODE/GUI.h
        my-smartcar/CODE/key.c
        my-smartcar/CODE/key.h
        my-smartcar/CODE/motor.c
        my-smartcar/CODE/motor.h
        my-smartcar/CODE/vofa.c
        my-smartcar/CODE/vofa.h
        my-smartcar/CODE/vofa_imageformat.h
        my-smartcar/USER/inc/isr.h
        my-smartcar/USER/inc/RT106X_config.h
        my-smartcar/USER/src/isr.c
        my-smartcar/USER/src/main.c)
